# cheaper_moe

./: .gitignore  load.sh  out.txt  readme.md  run.sh
QCompiler/: .gitignore  README.MD  combine_weight.py  get_act.sh  quant.sh
cutlass_kernels/: CMakeLists.txt  cpp_bindings.cpp
examples/: run_all.sh  run_all_deepseek.sh  run_all_qwen.sh  runvllm.sh  test.py  test_dense.py  vllmtest.py
seperated_kernel/: .gitignore  CMakeLists.txt  README.md  entry.cu  get_arch.cpp  load.sh  main.cu  pybind_mix.cpp  setup.py  test_all.py  test_pinn.py  test_spmm.py
seperated_kernel/gemm_opt/: .gitignore  bench_mix.py  bench_mix_int8.py  fp8.py  load.sh  save.json  setup.py  test.py  tritonfp8.py
seperated_kernel/gemm_opt/csrc/: bindings.cpp  cuda_kernel.cu  int8fuseddequantize.cu
seperated_kernel/gemm_opt/csrc/cutlass_extensions/: vllm_cutlass_library_extension.py
seperated_kernel/gemm_opt/csrc/cutlass_extensions/epilogue/: scaled_mm_epilogues_c2x.hpp  scaled_mm_epilogues_c3x.hpp
seperated_kernel/gemm_opt/csrc/cutlass_w8a8/: scaled_mm_c2x.cu  scaled_mm_c2x.cuh  scaled_mm_c3x.cu  scaled_mm_entry.cu
seperated_kernel/gemm_opt/csrc/symmetric/epilogue/thread/: linear_combination_dequant.h
seperated_kernel/gemm_opt/csrc/symmetric/gemm/kernel/: using paramsA_float = cutlass::transform.cpp
seperated_kernel/gemm_opt/test_with_mixq_kernel/: main  main.cu  makefile  utils.cuh
seperated_kernel/kernel/: CMakeLists.txt  eetq_gemm.cu  gemvsm90.cu  kernel.cu  kernel.h  mixgemm.cu
seperated_kernel/kernel/common/: common.h  ptx.h
seperated_kernel/kernel/symmetric/epilogue/thread/: linear_combination_dequant.h
seperated_kernel/kernel/symmetric/epilogue/threadblock/: default_epilogue_tensor_op_dequant.h  epilogue_dequant.h
seperated_kernel/kernel/symmetric/gemm/device/: gemm_dequant.h
seperated_kernel/kernel/symmetric/gemm/kernel/: default_gemm_dequant.h
seperated_kernel/test/: gen_data.py  test.py  test_correct.py  test_dequant.cu  test_dequant.py  test_w4a16.py
(+36 files in other folders)
